# predator-ubuntu-sense

./: .gitignore  AGENTS.md  Cargo.toml  README.md
apps/desktop/: package.json  pnpm-lock.yaml  vite.config.ts
apps/desktop/src/: main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src-tauri/src/commands/: command_runner.rs  mod.rs  performance.rs  status.rs
apps/desktop/src/app/: App.tsx  app-header.component.tsx  app-header.module.css  app-layout.component.tsx  app-layout.module.css  app-navigation.config.ts  app-sidebar.component.tsx  app-sidebar.module.css  app.component.tsx  app.types.ts
apps/desktop/src/features/dashboard/: dashboard-view.component.tsx  dashboard.component.tsx  dashboard.mock.ts  dashboard.service.ts  (+1 more)
crates/predator-core/: Cargo.toml
crates/predator-core/src/: errors.rs  lib.rs
crates/predator-core/src/adapters/: battery.rs  device_settings.rs  diagnostics.rs  driver_runtime.rs  mod.rs  performance.rs  rgb.rs
crates/predator-core/src/domain/: mod.rs  performance.rs  rgb.rs
crates/predator-helper/: Cargo.toml
crates/predator-helper/src/: main.rs
crates/predatorctl/: Cargo.toml
crates/predatorctl/src/: helper.rs  main.rs
docs/: frontend-improvements-backlog.md
packaging/polkit/: com.predatorubuntu.sense.policy
scripts/: install-driver-runtime-config.sh  install-local.sh  install-polkit-passwordless-rule.sh  install-polkit-policy.sh  uninstall-driver-runtime-config.sh  uninstall-local.sh  uninstall-polkit-passwordless-rule.sh  uninstall-polkit-policy.sh
(+81 files in other folders)
