[package]
name = "predator-ubuntu-sense-desktop"
version = "0.1.0"
description = "Desktop interface for Predator Ubuntu Sense"
authors = ["João Almeida"]
edition = "2021"
license = "MIT"

[lib]
name = "predator_ubuntu_sense_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
